--- a/scanner/index.html
+++ b/scanner/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WhatsApp Device Scanner</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>Scanner | Eren System</title>
+  <link rel="stylesheet" href="/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h1>Scan to Link WhatsApp</h1>
-    <form id="form">
-      <label for="countryCode">Select Country Code</label><br />
-      <select id="countryCode" required>
-        <option value="+880">+880 (Bangladesh)</option>
-        <option value="+91">+91 (India)</option>
-        <option value="+1">+1 (USA/Canada)</option>
-        <option value="+44">+44 (UK)</option>
-        <option value="+61">+61 (Australia)</option>
-        <option value="+62">+62 (Indonesia)</option>
-        <option value="+55">+55 (Brazil)</option>
-        <option value="+81">+81 (Japan)</option>
-        <option value="+92">+92 (Pakistan)</option>
-        <option value="+234">+234 (Nigeria)</option>
-        <option value="+27">+27 (South Africa)</option>
-        <!-- aro jodi dorkar hoi bol -->
-      </select><br /><br />
+  <div class="background-overlay">
+    <div class="loader-circle">
+      <span class="circle-text">Eren</span>
+    </div>
+    <div class="form-box">
+      <h1>Device Scanner</h1>
+      <form id="form">
+        <label for="countryCode">Country Code</label>
+        <select id="countryCode" required>
+          <option value="+880">+880 (BD)</option>
+          <option value="+91">+91 (IN)</option>
+          <option value="+1">+1 (US)</option>
+          <option value="+44">+44 (UK)</option>
+          <option value="+234">+234 (NG)</option>
+          <!-- More can be added -->
+        </select>
 
-      <input type="tel" id="number" placeholder="1234567890" required />
-      <button type="submit">Generate Pair Code</button>
-    </form>
+        <label for="number">Phone Number</label>
+        <input type="text" id="number" placeholder="Enter WhatsApp number" required />
 
-    <div id="loading" class="hidden loader"></div>
+        <button type="submit">Get Pair Code</button>
+      </form>
 
-    <div id="result" class="hidden">
-      <p><strong>Pair Code:</strong> <span id="pairCode"></span></p>
-      <p><strong>Session ID:</strong> <span id="sessionId"></span></p>
-      <p><strong>Status:</strong> <span id="statusText">Waiting for connection...</span></p>
+      <div id="loading" class="hidden">Loading...</div>
+
+      <div id="result" class="hidden">
+        <p><strong>Pair Code:</strong> <span id="pairCode"></span></p>
+        <p><strong>Session ID:</strong> <span id="sessionId"></span></p>
+        <p id="statusText">Status: Connecting...</p>
+      </div>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
